--- a/.github/workflows/key-build.yml
+++ b/.github/workflows/key-build.yml
@@ -13,7 +13,7 @@ jobs:
                 wget https://downloads.openwrt.org/snapshots/targets/qualcommax/ipq807x/openwrt-imagebuilder-qualcommax-ipq807x.Linux-x86_64.tar.zst
                 tar -xf openwrt-imagebuilder-qualcommax-ipq807x.Linux-x86_64.tar.zst
                 cd openwrt-imagebuilder-qualcommax-ipq807x.Linux-x86_64
-                make image PROFILE=dynalink_dl-wrx36
+                make image PROFILE=dynalink_dl-wrx36 PACKAGES="luci"
                 mkdir key
                 mv *.pem key/
              - name: Release build artifacts
