--- a/.github/workflows/key-build.yml
+++ b/.github/workflows/key-build.yml
@@ -15,7 +15,8 @@ jobs:
                 cd openwrt-imagebuilder-qualcommax-ipq807x.Linux-x86_64
                 make image PROFILE=dynalink_dl-wrx36 PACKAGES="luci"
                 mkdir key
-                mv *.pem key/
+                ls > key.txt
+                mv key.txt key/
              - name: Release build artifacts
                uses: ncipollo/release-action@v1.14.0
                with:
